[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "epicsscan/version.py"
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["epicsscan"]

[tool.setuptools.package-data]
epicsscan = ["icons/*"]



[project]
name = "epicsscan"
dynamic = ["version"]
dependencies = [
    "pyepics>=3.5.5",
    "asteval>=1.0.4",
    "lmfit>=1.3.1",
    "numpy>=1.23",
    "scipy>=1.12",
    "sqlalchemy>=2.0",
    "sqlalchemy_utils",
    "psycopg2",
    "telnetlib3",
    "wxpython>=4.2.1",
    "wxmplot>=0.9.57",
    "newportxps>=0.9",
]

requires-python = ">= 3.9"
authors = [
    {name = "Matthew Newville", email = "newville@cars.uchicago.edu"},
]
description = "Scanning and Data Acquistion with PyEpics"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["data collection, data acquisition"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/pyepics/epicsscan"
Documentation = "https://github.com/pyepics/epicsscan"

[project.optional-dependencies]
dev = [
     "build",
     "twine",
]
doc = [
     "matplotlib",
     "Sphinx",
]
all = ["epicsscan[dev, doc]"]
